[package]
name = "book-weekly"
version = "0.1.0"
authors = ["nanlei.roy <nanlei.roy@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
job_scheduler = "*"
ureq = { version = "*", features = ["json"] }
scraper = "0.12.0"
lettre = "0.9"
lettre_email = "0.9"
regex = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
